# cabsec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  LICENSE  LICENSE.txt  README.md  THANKS.md  devcontainer.json  makefile  pyproject.toml  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
export/data/: README.md  ministries.json  officer_infos.json  orders.json  post_infos.json  tenures-sample.csv  tenures.csv  tenures.json
export/data/orders/: 1_Upload_1.pdf.order.json  1_Upload_10.pdf.order.json  1_Upload_11.pdf.order.json  1_Upload_1146.pdf.order.json  1_Upload_1153.pdf.order.json  1_Upload_1154.pdf.order.json  1_Upload_1170.pdf.order.json  1_Upload_1171.pdf.order.json  1_Upload_1176.pdf.order.json  1_Upload_1177.pdf.order.json  1_Upload_1178.pdf.order.json  1_Upload_1194.pdf.order.json  1_Upload_1195.pdf.order.json  1_Upload_1210.pdf.order.json  1_Upload_1211.pdf.order.json  1_Upload_1215.pdf.order.json  1_Upload_1216.pdf.order.json  1_Upload_1227.pdf.order.json  1_Upload_1235.pdf.order.json  1_Upload_1249.pdf.order.json  1_Upload_1250.pdf.order.json  1_Upload_1266.pdf.order.json  1_Upload_1269.pdf.order.json  1_Upload_1387.pdf.order.json  1_Upload_1388.pdf.order.json  1_Upload_1392.pdf.order.json  1_Upload_1393.pdf.order.json  1_Upload_1420.pdf.order.json  1_Upload_1421.pdf.order.json  1_Upload_1443.pdf.order.json  1_Upload_1444.pdf.order.json  1_Upload_1451.pdf.order.json  1_Upload_1452.pdf.order.json  1_Upload_1453.pdf.order.json  1_Upload_1454.pdf.order.json  1_Upload_1456.pdf.order.json  1_Upload_1457.pdf.order.json  1_Upload_1458.pdf.order.json  1_Upload_1459.pdf.order.json  1_Upload_1460.pdf.order.json  (+780 more)
export/data/schema/: README.md  order.schema.json  tenure.schema.json
export/logs/: README.md
flow/: README.md
flow/annotateFirst_/: README.md  makefile  run_all.sh
flow/annotateFirst_/input/: 1_Upload_1.pdf.doc.json  1_Upload_10.pdf.doc.json  1_Upload_11.pdf.doc.json  1_Upload_1146.pdf.doc.json  1_Upload_1153.pdf.doc.json  1_Upload_1154.pdf.doc.json  1_Upload_1170.pdf.doc.json  1_Upload_1171.pdf.doc.json  1_Upload_1176.pdf.doc.json  1_Upload_1177.pdf.doc.json  1_Upload_1178.pdf.doc.json  1_Upload_1194.pdf.doc.json  1_Upload_1195.pdf.doc.json  1_Upload_1210.pdf.doc.json  1_Upload_1211.pdf.doc.json  1_Upload_1215.pdf.doc.json  1_Upload_1216.pdf.doc.json  1_Upload_1227.pdf.doc.json  1_Upload_1235.pdf.doc.json  1_Upload_1249.pdf.doc.json  1_Upload_1250.pdf.doc.json  1_Upload_1266.pdf.doc.json  1_Upload_1268.pdf.doc.json  1_Upload_1269.pdf.doc.json  1_Upload_1387.pdf.doc.json  1_Upload_1388.pdf.doc.json  1_Upload_1392.pdf.doc.json  1_Upload_1393.pdf.doc.json  1_Upload_1420.pdf.doc.json  1_Upload_1421.pdf.doc.json  1_Upload_1443.pdf.doc.json  1_Upload_1444.pdf.doc.json  1_Upload_1451.pdf.doc.json  1_Upload_1452.pdf.doc.json  1_Upload_1453.pdf.doc.json  1_Upload_1454.pdf.doc.json  1_Upload_1456.pdf.doc.json  1_Upload_1457.pdf.doc.json  1_Upload_1458.pdf.doc.json  1_Upload_1459.pdf.doc.json  (+872 more)
flow/annotateFirst_/output/: 1_Upload_1.pdf.annotfirst.json  1_Upload_10.pdf.annotfirst.json  1_Upload_11.pdf.annotfirst.json  1_Upload_1146.pdf.annotfirst.json  (+908 more)
flow/buildTenure_/: README.md  dates.txt  makefile  run_all.sh
flow/doOcr_/: README.md  makefile  run_all.sh
flow/doOcr_/src/: .info.yml  (+2 more)
import/documents/: documents.yml
import/models/: models.yml
import/src/: README.md  gen_urls.py  urls.txt
import/websites/: cabsec.gov.in
(+7520 files in other folders)
